[package]
name = "Poker-Validator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.17.1"
strum_macros = "0.17.1"
itertools = "0.10.5"
dialoguer = "0.10.3"
console = "0.9.1"
colored = "2.0.0"